fix general bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,39 @@
 {
     "cSpell.words": [
+        "DIVs",
+        "Heiti",
+        "Inman",
         "LINQ",
+        "Mikage",
+        "Ponticlaro",
+        "Sano",
+        "Taku",
+        "Zindex",
+        "dont",
+        "dudu",
+        "fini",
+        "galleriffic",
+        "iebody",
+        "ihistory",
+        "imga",
+        "itay",
+        "jush",
+        "lapo",
+        "lquo",
+        "lsaquo",
+        "napo",
         "nivmorabin",
-        "orassayag"
+        "offsetx",
+        "offsety",
+        "orassayag",
+        "pgsql",
+        "rapo",
+        "rlapo",
+        "rlquo",
+        "rquo",
+        "rsaquo",
+        "runat",
+        "sqlite",
+        "tabsbg"
     ]
 }
