--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,80 @@
 {
     "cSpell.words": [
+        "Aimg",
+        "Arkadi",
+        "Artzi",
+        "Attia",
+        "Attya",
+        "Aviv",
+        "Azoulay",
+        "Barby",
+        "Beit",
         "DIVs",
+        "Dfinal",
+        "Duchin",
+        "Dudus",
+        "Habubot",
+        "Hadag",
+        "Haim",
         "Heiti",
+        "Heli",
         "Inman",
+        "Itays",
         "LINQ",
+        "Margy",
+        "Mergy",
         "Mikage",
+        "Mula",
+        "Napos",
+        "Nicholls",
+        "Ninet",
+        "PLGTL",
+        "Perri",
+        "Perris",
         "Ponticlaro",
+        "Rami",
+        "Roey",
+        "Sakharof",
         "Sano",
+        "Shlomo",
+        "Shoken",
+        "Synergia",
         "Taku",
+        "Tayeb",
+        "Toledano",
+        "Wireup",
         "Zindex",
-        "dont",
+        "aben",
+        "abhe",
+        "bgcolor",
+        "ctext",
         "dudu",
+        "explenation",
         "fini",
         "galleriffic",
+        "gmail",
         "iebody",
         "ihistory",
         "imga",
         "itay",
+        "jquery",
         "jush",
         "lapo",
         "lquo",
         "lsaquo",
+        "mainli",
         "napo",
+        "newbg",
+        "newx",
         "nivmorabin",
         "offsetx",
         "offsety",
+        "onclick",
+        "onlick",
         "orassayag",
         "pgsql",
+        "pobj",
+        "popopenaobj",
         "rapo",
         "rlapo",
         "rlquo",
@@ -34,6 +82,8 @@
         "rsaquo",
         "runat",
         "sqlite",
-        "tabsbg"
+        "tabsbg",
+        "vsdoc",
+        "wiil"
     ]
 }
